Authorization rework (#167)
* Authorization rework

* FE integration

* Bugfixing and missing features

* Fix UI tests

* Fix BE tests

* Local DynamoDB

* Minikube DynamoDB

* Cleanup

* TODO elimination Part I.

* TODO elimination Part II.

* Readme